# carpinteria

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  main.py  package-lock.json  pyproject.toml  test_pieces.json  test_quote_router_wood.py
.cache/: activa_prices.json
carpinteria/: auth_users.py  calculator.py  catalog.py  cli_api.py  db.py  exchange_rate.py  generate_docx.js  google_creds.py  hardware.py  hardware_catalog.py  hardware_prices_sheet.py  lista_precios_diff.py  lista_precios_parser.py  lista_precios_sheets.py  memory.py  molduras_prices.py  openai_errors.py  pliego.py  prompts.py  quotation_session.py  quote_router.py  schemas.py  settings.py  sheets_reader.py  shipping.py  vision.py  wood_calculator.py
carpinteria/agents/: cotizador_chat.py  quote.py
carpinteria/data/: README.md  molduras_catalog.csv  wood_datos.csv
scripts/: flatten_price_sheets.py  upload_lista_precios.py
web/: package-lock.json  package.json
web/src/: proxy.ts
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/api/analyze/: route.ts
web/src/app/api/chat/: route.ts
web/src/app/api/memory/: route.ts
web/src/app/chat/: page.tsx
web/src/app/lista-precios/: page.tsx
web/src/app/usuarios/: page.tsx
web/src/components/: AppSidebar.tsx  AuthGate.tsx  BrandEnvironmentProvider.tsx  FileUpload.tsx  HardwarePricesPanel.tsx  PieceEditor.tsx  PliegoItems.tsx  QuoteResult.tsx
web/src/components/ui/: sonner.tsx
web/src/features/chat/: Chat.tsx  api.ts  schemas.ts
web/src/lib/: auth.ts  brand-environments.ts  python.ts  types.ts
(+34 files in other folders)
