[project]
name = "carpinteria"
version = "0.1.0"
description = "Cotizador de carpintería con OpenAI Agents SDK"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "google-api-python-client>=2.140.0",
    "google-auth>=2.49.1",
    "gspread>=6.2.1",
    "openai-agents>=0.12.5",
    "openpyxl>=3.1.5",
    "pydantic>=2.7.0",
    "pymongo>=4.10.1",
    "pypdf>=6.4.0",
    "python-dotenv>=1.1.0",
    "requests>=2.33.0",
]

[project.scripts]
carpinteria = "main:main"
